# emp-framework

./: .gitignore  CMakeLists.txt  main.cpp  test_model.h
3d-party/: route.h
cmake/: FindR3.cmake
http/: request.cpp  request.h  response.cpp  response.h  router.cpp  router.h
json/: json_fast_writer.cpp  json_fast_writer.h
middleware/: render.cpp  render.h
snapshot_db/: writer.cpp  writer.h
validation/: validation_result.cpp  validation_result.h
